--- a/usermanager/src/App.css
+++ b/usermanager/src/App.css
@@ -36,3 +36,31 @@
     transform: rotate(360deg);
   }
 }
+
+/* user application css */
+#users {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#users td, #users th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#users tr:nth-child(even){background-color: #f2f2f2;}
+
+#users tr:hover {background-color: #ddd;}
+
+#users th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+.link{
+  /*color: white;
+  cursor: ;*/
+}
